# sensor-supervisor-system

./: README.md
core-infra/: docker-compose-infra-swarm.yaml  docker-compose-infra.yaml  filebeat.yml  logstash.conf  prometheus.yml  swarm-stack-config-setup.sh  traefik.yml
core-infra/emqx/etc/: emqx.conf
core-infra/grafana-provisioning/dashboards/: client-dashboard.json  dashboard.yml
core-infra/grafana-provisioning/datasources/: datasource.yml
sss-alert-service/: README.md  pom.xml
sss-auth-acl-service/: .gitignore  README.md  build-and-push.sh  compose-devservices.yml  docker-compose.yaml  docker-compose.yaml.bak  env_exemple.txt  pom.xml  prometheus.yml
sss-auth-acl-service/emqx/etc/: emqx.conf
sss-data-ingestor-service/: README.md  build-and-push.sh  env_exemple  pom.xml
sss-device-service/: README.md  build-and-push.sh  compose-devservices.yaml  pom.xml
sss-esp32/template-app/: .gitignore  CMakeLists.txt
sss-esp32/template-app/components/alert_mode/: CMakeLists.txt  alert_mode.cpp
sss-esp32/template-app/components/alert_mode/include/: alert_mode.hpp
sss-esp32/template-app/components/configuration_mode/: CMakeLists.txt  configuration_mode.cpp
sss-esp32/template-app/components/configuration_mode/include/: configuration_mode.hpp
sss-esp32/template-app/components/normal_mode/: CMakeLists.txt  normal_mode.cpp
sss-esp32/template-app/components/normal_mode/include/: normal_mode.hpp
sss-esp32/template-app/main/: CMakeLists.txt  idf_component.yml  main.cpp
sss-telemetry-storage-service/: README.md  build-and-push.sh  compose-devservices.yaml  pom.xml
sss-web-admin/: build-and-push.sh  middleware.ts  next.config.ts  package-lock.json  package.json
test_mqtt/: go.mod  main.go
(+334 files in other folders)
